precheck jdtls exists